k8s_deployments/fe-srv-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv-ingress
  labels:
    type: fe-srv
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"fe":"HTTP2", "fe-web": "HTTP"}'     
spec:
  #type: ClusterIP
  type: NodePort
  #type: LoadBalancer  
  ports:
  - name: fe
    port: 443
    protocol: TCP
    targetPort: 443
  - name: fe-web
    port: 8081
    protocol: TCP
    targetPort: 8081          
  selector:
    app: fe
