k8s_deployments/fe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fe-ingress
spec:
  tls:
  - hosts:
    - main.esodemoapp2.com
    secretName: fe-secret
  backend:
    serviceName: fe-srv-ingress
    servicePort: 443
